--- a/src/app/todo/todoinput/todoinput.component.html
+++ b/src/app/todo/todoinput/todoinput.component.html
@@ -1,4 +1,7 @@
-<form (ngSubmit)="addToDo()">
-  <input type="text" name="toDo" [(ngModel)]="toDo">
-  <button [disabled]="!toDo">Add</button>
-</form>
+<div class="container">
+  <form (ngSubmit)="addToDo()">
+    <input type="text" name="toDo" class="input" [(ngModel)]="toDo">
+    <button [disabled]="!toDo">Add</button>
+  </form>
+
+</div>
