--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -3,6 +3,6 @@
   <app-todoinput (createToDo)="onCreate($event)"></app-todoinput>
 
   <app-todos [toDoList]="toDoList$ | async" (delete)="onDelete($event)" (toggle)="onToggle($event)"
-    (deleteAllDone)="onDeleteAllDone()"></app-todos>
+    (deleteAllDone)="onDeleteAllDone()" (edit)="onEdit($event)"></app-todos>
 
 </div>
