--- a/src/app/todo/todos/todos.component.html
+++ b/src/app/todo/todos/todos.component.html
@@ -1,28 +1,27 @@
 <div class="container">
-  <ul>
+  <ul class="todos">
     <li *ngFor="let todo of toDoList">
-      <div *ngIf="!todo.isCompleted">
+      <div *ngIf="!todo.isCompleted && !editIds.includes(todo.id)">
         <input type="checkbox" [checked]="todo.isCompleted" (click)="onToggle($event, todo.id)">
         <label>
           <span *ngIf="!todo.isCompleted">{{todo.toDo}}</span>
         </label>
+        <span (click)="editToDo(todo.id)">Edit</span>
         <span (click)="deleteToDo(todo.id)">Delete</span>
       </div>
+      <app-todoedit *ngIf="editIds.includes(todo.id)" [todo]="todo" (edit)="onEdit($event, todo.id)"></app-todoedit>
     </li>
   </ul>
 
 
-  <ul>
+  <ul class="todos">
+    <span class="clearBtn" (click)="deleteAllDoneTodos()">Clear</span>
     <li *ngFor="let todo of toDoList">
       <label *ngIf="todo.isCompleted">
         <del>
           <span>{{todo.toDo}}</span>
         </del>
-        <span (click)="deleteToDo(todo.id)">Delete</span>
       </label>
     </li>
   </ul>
-
 </div>
-
-<span (click)="deleteAllDoneTodos()">Clear</span>
