--- a/src/app/todo/todos/todos.component.scss
+++ b/src/app/todo/todos/todos.component.scss
@@ -1,3 +1,28 @@
+* {
+  padding: 0;
+}
+
 li {
   list-style-type: none;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.todos {
+  display: flex;
+  flex-direction: column;
+  min-width: 20vw;
+  min-height: 60vh;
+  border: 0.5px solid black;
+}
+
+.clearBtn {
+  width: 100%;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
 }
