--- a/src/app/todo/todoinput/todoinput.component.scss
+++ b/src/app/todo/todoinput/todoinput.component.scss
@@ -2,6 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .input-group {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+
+    input {
+      width: 50vw;
+    }
+  }
 }
 
 
