--- a/src/app/todo/todos/todos.component.html
+++ b/src/app/todo/todos/todos.component.html
@@ -1,27 +1,35 @@
 <div class="container">
-  <ul class="todos">
-    <li *ngFor="let todo of toDoList">
-      <div *ngIf="!todo.isCompleted && !editIds.includes(todo.id)">
-        <input type="checkbox" [checked]="todo.isCompleted" (click)="onToggle($event, todo.id)">
-        <label>
-          <span *ngIf="!todo.isCompleted">{{todo.toDo}}</span>
+
+  <div class="container-todo">
+    <h2>Todo</h2>
+    <ul class="todos">
+      <li *ngFor="let todo of toDoList">
+        <div *ngIf="!todo.isCompleted && !editIds.includes(todo.id)" (dblclick)="editToDo(todo.id)">
+          <input type="checkbox" [checked]="todo.isCompleted" (click)="onToggle($event, todo.id)">
+          <label>
+            <span *ngIf="!todo.isCompleted">{{todo.toDo}}</span>
+          </label>
+        </div>
+        <app-todoedit *ngIf="editIds.includes(todo.id)" [todo]="todo" (edit)="onEdit($event, todo.id)"
+          (delete)="onDelete($event)"></app-todoedit>
+      </li>
+    </ul>
+  </div>
+
+
+  <div class="container-todo-done">
+    <h2>Done</h2>
+    <ul class="todos-done">
+      <li *ngFor="let todo of toDoList">
+        <label *ngIf="todo.isCompleted">
+          <del>
+            <span>{{todo.toDo}}</span>
+          </del>
         </label>
-        <span (click)="editToDo(todo.id)">Edit</span>
-        <span (click)="deleteToDo(todo.id)">Delete</span>
-      </div>
-      <app-todoedit *ngIf="editIds.includes(todo.id)" [todo]="todo" (edit)="onEdit($event, todo.id)"></app-todoedit>
-    </li>
-  </ul>
+      </li>
+    </ul>
+    <button class="clearBtn btn" (click)="deleteAllDoneTodos()">Clear</button>
+  </div>
 
 
-  <ul class="todos">
-    <span class="clearBtn" (click)="deleteAllDoneTodos()">Clear</span>
-    <li *ngFor="let todo of toDoList">
-      <label *ngIf="todo.isCompleted">
-        <del>
-          <span>{{todo.toDo}}</span>
-        </del>
-      </label>
-    </li>
-  </ul>
 </div>
